Implemented get products from api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,14 @@ android {
             debuggable true
             resValue "string", "API_KEY", WAlSMART_API_KEY
             resValue "bool", "LOG_ENABLED", "true"
-            resValue "string", "BASE_URL", "https://walmartlabs-test.appspot.com/_ah/api/walmart/v1"
+            resValue "string", "BASE_URL", "https://walmartlabs-test.appspot.com/_ah/api/walmart/v1/"
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
         }
         release {
             resValue "string", "API_KEY", WAlSMART_API_KEY
             resValue "bool", "LOG_ENABLED", "false"
-            resValue "string", "BASE_URL", "https://walmartlabs-test.appspot.com/_ah/api/walmart/v1"
+            resValue "string", "BASE_URL", "https://walmartlabs-test.appspot.com/_ah/api/walmart/v1/"
 
             minifyEnabled true
             debuggable false
@@ -45,10 +45,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':model')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
