--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".productlist.widget.ProductListActivity"
+            android:name=".productlist.view.ProductListActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,11 +21,11 @@
         </activity>
 
         <activity
-            android:name=".productdetail.widget.ProductDetailActivity"
-            android:parentActivityName=".productlist.widget.ProductListActivity">
+            android:name=".productdetail.view.ProductDetailActivity"
+            android:parentActivityName=".productlist.view.ProductListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".productlist.widget.ProductListActivity"/>
+                android:value=".productlist.view.ProductListActivity"/>
         </activity>
     </application>
 
